added search event

--- a/src/app/assets/css/event/event.component.css
+++ b/src/app/assets/css/event/event.component.css
@@ -1,6 +1,12 @@
+@import "~nouislider/distribute/nouislider.min.css";
+
 .postpagination a {
     font-weight: bold;
     height: 36px !important;
     line-height: 35px !important;
     width: 36px !important;
+}
+#zipcodeErr{
+	color: red;
+	font-size: 13px;
 }
