Fixed multi image upload deletion and featured image issue

--- a/src/app/assets/css/eventadd/eventadd.component.css
+++ b/src/app/assets/css/eventadd/eventadd.component.css
@@ -8,7 +8,8 @@
 	font-weight: normal;
 }
 .modal{
-	position: sticky;
+	height: 1500px;   
+    position: absolute;
 }
 .modal-header{
 margin-bottom: 20px;
