--- a/src/app/view/eventadd/eventadd.component.html
+++ b/src/app/view/eventadd/eventadd.component.html
@@ -135,7 +135,7 @@
                     </div>    
                     <div class="form_row clearfix">
                         <label>Contact Info<span class="indicates">*</span></label>
-                        <input type="tel" [(ngModel)]="contact_info"  name="contact_info" value="" class="form-control textfield">
+                        <input type="tel" [(ngModel)]="contact_info" id="contactinfo"  name="contact_info" value="" class="form-control textfield">
                         <span class="errfield">{{contact}}</span>                          
                     </div>
                     <div class="form_row clearfix">
