add activate profile component

--- a/src/app/view/event-detail/event-detail.component.html
+++ b/src/app/view/event-detail/event-detail.component.html
@@ -22,7 +22,7 @@
                         <div class="entry-header-title">
                             <h1 class="entry-title ">{{data.event_data.event_title}}</h1>
                             <div class="event_rating">
-                                <div class="event_rating_row"> <span><a href="#comments">{{data.review.review_count}}  Reviews</a></span> 
+                                <div class="event_rating_row"> <span><a href="javascript:void(0)">{{data.review.review_count}}  Reviews</a></span> 
                                 <div style="float:right"> 
                                  <rating [(ngModel)]="data.event_data.rating"
                                  [readonly]="true" [float]="true">
