--- a/src/app/view/eventadd/eventadd.component.html
+++ b/src/app/view/eventadd/eventadd.component.html
@@ -314,7 +314,7 @@
                         <div class="modal-footer">
                             <button type="button" class="btn btn-default" data-dismiss="modal" (click)="addLocationForm.reset();removeLocationData();modal.dismiss();">Cancel</button>
                             <!--<button type="button" class="btn btn-primary" (click)="modal.close()">Save</button>-->  
-                            <button class="btn btn-info" type="submit" value="Save" name="venue_submit">Save</button>  
+                            <button class="btn btn-info" type="submit" value="Save" id="venue_submit" name="venue_submit">Save</button>  
                         </div>
                   
                     </form>                       
