--- a/src/app/view/layouts/second-menu/second-menu.component.html
+++ b/src/app/view/layouts/second-menu/second-menu.component.html
@@ -10,6 +10,7 @@
                     <div class="menu">
                         <ul id="menu-secondary-items" class="mega">
                             <!-- <li  *ngFor = "let category of menuArr let index = index"><a href="">{{category.category_name}}</a></li> -->
+                            <li><a (click)="getEventByCategory('all',-1)">All</a></li>
                             <li [ngClass] = "{'current-menu-item current_page_item':(index==selectedIndex)}"  *ngFor="let category of menuArr; let index = index" >
                             <a href="javascript:void(0)" (click)="getEventByCategory(category.category_name,index)">{{category.category_name}}</a>
                             </li>
