add blog by category

--- a/src/app/view/blog/blog.component.html
+++ b/src/app/view/blog/blog.component.html
@@ -56,6 +56,9 @@
                         <!-- #post -->
                     </div>		
                 </div>
+                 <div class="widget-wrap widget-inside" *ngIf="empty_data">
+                <h4 style="text-align: center;">No Result Found</h4>
+                </div>
          
             </div>
             
