--- a/src/app/assets/css/custom_style.css
+++ b/src/app/assets/css/custom_style.css
@@ -109,6 +109,7 @@ a:hover{
     display: inline-block;
     margin: 3px;
 }
+
 .p-a-md {
     padding: 1.5rem!important;
 }
@@ -545,6 +546,11 @@ a.lw_fpw_lnk{
 .logreg-link, .widgets-link{
     color: #2d2d2d;
 }
+
+#server ul li {
+    border: none !important;
+}
+
 @media screen and (max-width:767px) {
     .organization-logo {
         display: inline-block;
