--- a/src/app/view/my-organizations/my-organizations.component.html
+++ b/src/app/view/my-organizations/my-organizations.component.html
@@ -12,7 +12,7 @@
 		
 			<div id="content" role="main" class="col-md-12 col-sm-12 columns">
 			  <h1 class="loop-title org_btn">Organization <a class="btn btn-warning pull-right" href="" [routerLink]="['/organization-add']">Add Organization</a></h1>
-				<div class="form-group organization_div row"  *ngFor = "let org of organizationArr">
+				<div class="form-group organization_div row"  *ngFor = "let org of organizationArr | paginate: { id: 'server',  itemsPerPage: per_page, currentPage: currentPage, totalItems: Total}">
 
 					
 					<div class="col-md-8">
@@ -50,13 +50,15 @@
 				</div>
 
 
+				<div class="has-text-centered" style="text-align: center;">
+				<pagination-controls  (pageChange)="getOrganizationPagination($event)" id="server"></pagination-controls>
+			</div>
 
-
-				 <div class="postpagination_776778595 postpagination clearfix">
+				 <!-- <div class="postpagination_776778595 postpagination clearfix">
                 <div class="pagination" *ngFor="let object of createRange(Total)">
                 <a  class="page-numbers" href="javascript:void(0)" [ngClass]="{'active': object==currentPage}" (click)="getOrganizationPagination(object)" > {{object}} </a>
                 </div>
-                </div>
+                </div> -->
 				  
 				
 
