--- a/src/app/view/layouts/footer/footer.component.html
+++ b/src/app/view/layouts/footer/footer.component.html
@@ -65,11 +65,11 @@
                         <div class="widget-wrap widget-inside">
                             <h3 class="widget-title">Quick Links</h3>
                             <ul class="xoxo pages">
-                                <li><a href="#">Home</a></li>
-                                <li><a href="#">Events</a></li>
-                                <li><a href="#">Blog</a></li>
-                                <li><a href="#">Sponsors</a></li>
-                                <li><a href="#">Contact Us</a></li>
+                                <li><a href="" [routerLink]="['/']">Home</a></li>
+                                <li><a href="" [routerLink]="['/event']" >Events</a></li>
+                                <li><a href="" [routerLink]="['/blog']">Blog</a></li>
+                                <li><a href="" [routerLink]="['/sponsors']">Sponsors</a></li>
+                                <li><a href="" [routerLink]="['/contactus']">Contact Us</a></li>
                             </ul>
                         </div>
                     </div>
