--- a/src/app/view/event-detail/event-detail.component.html
+++ b/src/app/view/event-detail/event-detail.component.html
@@ -750,8 +750,8 @@
 
     
     </section>
-    <!-- <app-footer></app-footer> -->
-<!-- <modal #delete_modal>
+<!-- <app-footer></app-footer> -->
+<modal #delete_modal>
     <modal-header [show-close]="true">
         <h4 class="modal-title">Are you sure!</h4>
     </modal-header>
@@ -760,4 +760,4 @@
             <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
             <button type="button" class="btn btn-primary" data-dismiss="modal" (click)="delete()">Ok</button>
         </modal-footer>
-</modal> -->
+</modal>
