Hidden the featured star for venue edit

--- a/src/app/view/venues-edit/venues-edit.component.html
+++ b/src/app/view/venues-edit/venues-edit.component.html
@@ -91,7 +91,7 @@
                      </div>
                         <br>
 
-                        <div class="form_row clearfix">
+                        <div class="form_row clearfix venue_uploader">
                             <label>Upload Images</label>                        
                             <input id="eventImages" (ngModelChange)="uploadImages($event)" name="images" [(ngModel)]="eventImages" type="file" data-preview-file-type="text" multiple>
                             <input type="hidden" id="attach_ids" name="image_id" value="{{imageArr}}"> 
