Applied modifications to add location popup form

--- a/src/app/view/eventadd/eventadd.component.html
+++ b/src/app/view/eventadd/eventadd.component.html
@@ -312,7 +312,7 @@
 
                         <div class="clearfix"></div>
                         <div class="modal-footer">
-                            <button type="button" class="btn btn-default" data-dismiss="modal" (click)="addLocationForm.reset();removeLocationData();modal.dismiss();">Cancel</button>
+                            <button type="button" class="btn btn-default" id="venue_cancel" data-dismiss="modal" (click)="addLocationForm.reset();removeLocationData();modal.dismiss();">Cancel</button>
                             <!--<button type="button" class="btn btn-primary" (click)="modal.close()">Save</button>-->  
                             <button class="btn btn-info" type="submit" value="Save" id="venue_submit" name="venue_submit">Save</button>  
                         </div>
